UserServiceTest small fixup